--- a/css/arizona.css
+++ b/css/arizona.css
@@ -160,6 +160,10 @@ input[type=checkbox].css-checkbox {
 
 
 div.form_class {
+	display: grid;
+	grid-template-columns: 20% 80%;
+	grid-template-rows: auto;
+	grid-gap: 0;
 	color: white;
 	position: fixed;
 	width: 80%;
@@ -169,27 +173,44 @@ div.form_class {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding: 30px;
 	background-color: #a09632;
-	display: none;
 }
 
 div.form_left {
-	width: 20%;
-	float:left;
+/*	width: 20%;
+	float:left;*/
+	grid-row: 1 / 11;
 	font-size: 32px;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
+	border: 1px solid #000000;
+	padding: 10px;
 
 }
 
-
-div.form_right {
-	width: 80%;
-	float:right;
+div.form_right_top {
+/*	width: 80%;
+	float:right;*/
 	font-size: 24px;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
+	border-bottom: 1px solid #000000;
+	border-top: 1px solid #000000;
+	border-right: 1px solid #000000;
+	padding: 2px;
+
+}
+
+div.form_right {
+/*	width: 80%;
+	float:right;*/
+	font-size: 24px;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 700;
+	border-bottom: 1px solid #000000;
+	border-right: 1px solid #000000;
+	padding: 2px;
+
 }
 
 div.confirma {
@@ -197,6 +218,10 @@ div.confirma {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 700;
 	cursor: pointer;
+	border-bottom: 1px solid #000000;
+	border-right: 1px solid #000000;
+		padding: 2px;
+
 }
 
 div.screenplay {
