--- a/css/map.css
+++ b/css/map.css
@@ -143,7 +143,14 @@ div.video_wrapper {
 	background-color: #0000aa;
 }
 
-
+div.video_arrow {
+	position: relative;
+	top: 24px;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	text-align: center;
+}
 /* checkboxes */
 input[type=checkbox].css-checkbox {
 							position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
