--- a/css/map.css
+++ b/css/map.css
@@ -149,9 +149,8 @@ div.video_wrapper {
   padding-top: 0;
 
 
-
-	background-color: #CD5E12;
-	/*display: none;*/
+	background: transparent url('../images/loading.gif')  center no-repeat;;
+	/*display: none; background-color: #CD5E12;*/
 }
 .video_wrapper iframe {
 	position: absolute;
@@ -160,6 +159,9 @@ div.video_wrapper {
 	width: 100%;
 	height: 100%;
 	background-color: #0000aa;
+
+
+
 }
 
 div.video_arrow {
