--- a/css/map.css
+++ b/css/map.css
@@ -179,104 +179,6 @@ div.video_arrow {
 	border: 0;
 	text-align: center;
 }
-/* checkboxes */
-input[type=checkbox].css-checkbox {
-							position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
-						}
-
-						input[type=checkbox].css-checkbox + label.css-label {
-							padding-left:20px;
-							height:15px;
-							display:inline-block;
-							line-height:150%;
-							background-repeat:no-repeat;
-							background-position: 0 0;
-							font-size:15px;
-							vertical-align:middle;
-							cursor:pointer;
-
-						}
-
-						input[type=checkbox].css-checkbox:checked + label.css-label {
-							background-position: 0 -15px;
-						}
-						label.css-label {
-							  font-family: 'Georgia', serif;
-									font-style: italic;
-							background-image:url("../images/checkbox.png");
-							-webkit-touch-callout: none;
-							-webkit-user-select: none;
-							-khtml-user-select: none;
-							-moz-user-select: none;
-							-ms-user-select: none;
-							user-select: none;
-						}
-
-
-div.form_class {
-	display: grid;
-	grid-template-columns: 20% 80%;
-	grid-template-rows: auto;
-	grid-gap: 0;
-	color: white;
-	position: fixed;
-	width: 80%;
-	height: 70%;
-	margin: auto;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: #a09632;
-}
-
-div.form_left {
-/*	width: 20%;
-	float:left;*/
-	grid-row: 1 / 11;
-	font-size: 32px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	border: 1px solid #000000;
-	padding: 10px;
-
-}
-
-div.form_right_top {
-/*	width: 80%;
-	float:right;*/
-	font-size: 24px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	border-bottom: 1px solid #000000;
-	border-top: 1px solid #000000;
-	border-right: 1px solid #000000;
-	padding: 2px;
-
-}
-
-div.form_right {
-/*	width: 80%;
-	float:right;*/
-	font-size: 24px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	border-bottom: 1px solid #000000;
-	border-right: 1px solid #000000;
-	padding: 2px;
-
-}
-
-div.confirma {
-	font-size: 18px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
-	cursor: pointer;
-	border-bottom: 1px solid #000000;
-	border-right: 1px solid #000000;
-		padding: 2px;
-
-}
 
 div.screenplay {
 		color:  #5a5a5a;
@@ -330,15 +232,12 @@ div.screenplay_header {
 }
 
 div.screenplay_content {
-	font-size: 14px;
-	font-family: 'Roboto Mono', serif;
-	font-weight: 700;
-	font-style: italic;
+	font-size: 12px;
+	font-family: 'Roboto Mono', monospace;
 
 }
 
 div.screenplay_screenplay {
-	font-size: 14px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
+	font-size: 12px;
+	font-family: 'Roboto Mono', monospace;
 }
