--- a/css/map.css
+++ b/css/map.css
@@ -104,15 +104,35 @@ div.wrapper_wrapper {
 
 }
 
-div.wrapper_seta_fronteira {
+
+div.fence_us {
+	display: none;
+	bottom: 70px;
 	position: absolute;
-	bottom: 0px;
+	left: 50%;
+	transform: translate(-50%, 0);
+}
+
+div.fence {
+	position: absolute;
 	padding: 5px;
-	width: 100%;
 	text-align: center;
 	cursor: pointer;
-		display: none;
+	display: none;
+	left: 50%;
+	bottom: 30px;
+	transform: translate(-50%, 0);
 }
+
+
+div.fence_mexico {
+	display: none;
+	bottom: 10px;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 0);
+}
+
 
 div.wrapper_fronteira {
 	position: absolute;
@@ -240,4 +260,40 @@ div.screenplay_content {
 div.screenplay_screenplay {
 	font-size: 12px;
 	font-family: 'Roboto Mono', monospace;
+}
+
+div.box_fronteira {
+	display: none;
+	grid-template-columns: 95% 5%;
+	grid-gap: 0;
+	color:  white;
+	background-color: black;
+	position: absolute;
+	width: 550px;
+	height: 200px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 20px;
+}
+
+div.box_fronteira_text {
+
+	padding: 20px;
+	font-size: 12px;
+	font-family: 'Roboto Mono', monospace;
+}
+
+span.box_fronteira_title {
+
+	font-size: 12px;
+	font-family: 'Roboto Mono', monospace;
+	font-weight: 700;
+}
+
+
+
+div.box_fronteira_close {
+	cursor: pointer;
 }
