added navigation behavious. changed screenplay_wrapper to wrappe_screenplar for coherence

--- a/css/map.css
+++ b/css/map.css
@@ -309,7 +309,7 @@ div.video_arrow {
 	text-align: center;
 }
 
-div.screenplay_wrapper {
+div.wrapper_screenplay {
 		background-color: white;
 		position: fixed;
 		width: 300px;
