--- a/css/map.css
+++ b/css/map.css
@@ -339,7 +339,48 @@ div.screenplay_close {
 
 }
 
+div.wrapper_reiniciar {
+	position: absolute;
+	width: 300px;
+	height: 200px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 14px;
+	background-color: #ffcf2f;
+	display: none;
+	grid-template-columns: 50% 50%;
+	text-align: center;
+	grid-gap: 1px;
+	padding: 10px;
 
+}
+
+div.reiniciar_text {
+	grid-column: 1 / 3;
+	/*border: 1px solid #ff0000;*/
+}
+
+div.reiniciar_button {
+	width: 80px;
+	margin: 30px;
+	border: 1px solid #ff0000;
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+div.yellow_on_black {
+	background-color: black;
+	color:  #ffcf2f;
+}
+
+div.reiniciar_content {
+	position: relative;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	vertical-align: middle;
+}
 
 div.box_fronteira {
 	display: none;
