--- a/css/map.css
+++ b/css/map.css
@@ -166,17 +166,22 @@ div.fence_mexico {
 }
 
 
-div.wrapper_welcome {
+div.wrapper_welcome,
+div.wrapper_welcome_arrows {
 	background-color: white;
 	position: absolute;
+	height: 400px;
+	width: 550px;
 	left: 50%;
 	top: 50%;
 	padding: 20px;
 	transform: translate(-50%, -50%);
+		overflow: auto;
 }
 
 div.welcome_text {
-	font-size: 11px;
+	font-size: 12px;
+
 }
 
 div.welcome_close {
