--- a/css/map.css
+++ b/css/map.css
@@ -166,8 +166,7 @@ div.fence_mexico {
 }
 
 
-div.wrapper_welcome,
-div.wrapper_welcome_arrows {
+div.wrapper_welcome {
 	background-color: white;
 	position: absolute;
 	height: 400px;
@@ -176,7 +175,7 @@ div.wrapper_welcome_arrows {
 	top: 50%;
 	padding: 20px;
 	transform: translate(-50%, -50%);
-		overflow: auto;
+	overflow: auto;
 }
 
 div.welcome_text {
