--- a/css/map.css
+++ b/css/map.css
@@ -427,21 +427,29 @@ div.box_fronteira_close {
 
 div.wrapper_video_content {
 	position: absolute;
-	display: grid;
+	display: none;
 	grid-template-columns: 535px auto 535px;
-	width: 100%;
-	height: 100%;
 	top: 0;
 	left: 0;
+	right: 0;
+	bottom: 0;
+	font-size: 22px;
+	font-weight: 700;
+	color: white;
+	padding: 20px;
 }
 
 div.video_content_left {
 	border: 1px solid red;
+	position: relative;
+	top: 50%;
 }
 
 div.video_content_right {
 	border: 1px solid red;
 	text-align: right;
+	position: relative;
+	top: 50%;
 
 }
 
@@ -450,17 +458,18 @@ iframe.video_content_frame	{
  width: 533px;
  }
 
-div.video_content_wrapper {
-	height: : 100%;
-	border: 3px solid green;
-}
-
 div.text_content_left {
 	border: 1px solid red;
 	grid-column: 1 / span 2;
+	padding: 20px;
+	position: relative;
+	top: 50%;
 }
 
 div.text_content_right {
 	border: 1px solid red;
 	grid-column: 2 / span 2;
+	padding: 20px;
+	position: relative;
+	top: 50%;
 }
