--- a/css/map.css
+++ b/css/map.css
@@ -548,11 +548,11 @@ div.text_content_right {
 div.wrapper_video_full {
 	display: none;
 	position: absolute;
-	width: 97%;
-	height: 97%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	/*transform: translate(-50%, -50%);*/
 }
 
 div.back_arrow {
